# app-annotation

./: .env.example  .gitignore  README.md  pyproject.toml
evals/: run_eval.py  run_eval_cohens_kappa.py  run_web_search_eval.py
scripts/: run_batch.py  run_single.py
src/app_annotation/: config.py  graph.py  models.py  prompts_loader.py  schemas.py  state.py
src/app_annotation/nodes/: search.py  spoof_check_node.py
src/app_annotation/prompts/: spoof_check.md  web_search.md
src/app_annotation/tools/: spoof_check.py  web_search.py
tests/: test_spoof_check.py
